--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ h1 {
     overflow: hidden;
     border-radius: 20px;
     background-color: transparent;
-    z-index: 20;
 }
 
 .divLR {
@@ -42,12 +41,12 @@ h1 {
 }
 
 .divLogIn {
-    background-color: darkgreen;
+    background-color: var(--col3);
     color: var(--col3);
 }
 
 .divRegister {
-    background-color: darkblue;
+    background-color: var(--col3);
     color: var(--col3);
 
 }
@@ -64,7 +63,7 @@ h1 {
     position: relative;
     width: 160px;
     height: 30px;
-    border: solid 2px var(--col1);
+    border: solid 2px var(--col2);
     box-shadow: 2px 2px 5px;
     border-radius: 15px;
 }
@@ -77,6 +76,9 @@ h1 {
     background-color: transparent;
     cursor: pointer;
     z-index: 5;
+    font-family: fantasy;
+    font-size: 20px;
+    transition: linear 0.2s;
 }
 .btnLogIn {
     left: 0;
@@ -88,8 +90,16 @@ h1 {
     position: absolute;
     width: 50%;
     height: 100%;
-    background-color: var(--col1);
+    background-color: var(--col2);
     /* opacity: 0.7; */
     border-radius: 10px;
     transition: linear 0.2s;
+}
+
+.monInput {
+    width: 250px;
+    height: 30px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
 }
